modified:   12. Exception Handling/The Anatomy of an Exception.ipynb

--- a/12. Exception Handling/The Anatomy of an Exception.ipynb
+++ b/12. Exception Handling/The Anatomy of an Exception.ipynb
@@ -572,16 +572,63 @@
     }
    },
    "source": [
-    "Let’s now modify the code in the example above to make it **handle its exceptions**.    \n",
-    "   \n",
-    "To do this, we wrap the code that could create problems in `try`-`catch` and then we add `catch` **blocks** to **handle** the two types of **exceptions** we know could arise:\n",
-    "1. `FileNotFoundException` - The file name provided does not exist.\n",
-    "2. `IOExceptions` - other input/output related interruptions."
+    "First, let's set up a string variable to store any **Stack Trace** information we get back after an **Exception**:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public string stackTrace;"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Now, let's modify the code in the example above to make it **handle its exceptions**.    \n",
+    "   \n",
+    "To do this, we wrap the code that could create problems in `try`-`catch` and then we add `catch` **blocks** to **handle** the type of **exception** we know could arise -- a `FileNotFoundException`, where the file name provided does not exist."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -598,13 +645,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The file '1 will definately%20cause an Exception.pdffff' could not be found.\r\n"
+      "The file '1 will definately%20cause an Exception.pdffff' could not be found.\n",
+      "\r\n"
      ]
     }
    ],
    "source": [
-    "// We add code within the try block that potentially results in an Exception \n",
-    "try {\n",
+    "// Add code within the try block that potentially results in an Exception \n",
+    "try \n",
+    "{\n",
     "    TextReader reader = new StreamReader( badFileName ); \n",
     "    string line = reader.ReadLine(); \n",
     "    Console.WriteLine(line); \n",
@@ -612,22 +661,79 @@
     "}\n",
     "\n",
     "\n",
-    "\n",
-    "// Here, we implement our own handler for the  FileNotFoundException\n",
+    "// Implement our own handler for the  FileNotFoundException\n",
+    "// which prints out a meessage explaining the issue and saves the \n",
+    "// Stack Trace  in a variable for later reference \n",
     "catch( FileNotFoundException fnfe )\n",
     "{\n",
-    "    Console.WriteLine($\"The file '{ badFileName }' could not be found.\");\n",
-    "}\n",
-    "\n",
-    "\n",
-    "\n",
-    "// We additionally implement our own handler for the  IOException\n",
-    "catch( IOException ioe )\n",
-    "{\n",
-    "    Console.WriteLine(\n",
-    "        $\"Below you will find the Stack Trace:\\n\\n{ ioe.StackTrace }\"\n",
-    "    );\n",
+    "    Console.WriteLine( $\"The file '{ badFileName }' could not be found.\\n\" );\n",
+    "    stackTrace = fnfe.StackTrace;\n",
     "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "We may now review the following **Stack Trace** that we captured in reference to the `FileNotFounException`: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   at Microsoft.Win32.SafeHandles.SafeFileHandle.CreateFile(String fullPath, FileMode mode, FileAccess access, FileShare share, FileOptions options)\r\n",
+       "   at Microsoft.Win32.SafeHandles.SafeFileHandle.Open(String fullPath, FileMode mode, FileAccess access, FileShare share, FileOptions options, Int64 preallocationSize, Nullable`1 unixCreateMode)\r\n",
+       "   at System.IO.Strategies.OSFileStreamStrategy..ctor(String path, FileMode mode, FileAccess access, FileShare share, FileOptions options, Int64 preallocationSize, Nullable`1 unixCreateMode)\r\n",
+       "   at System.IO.Strategies.FileStreamHelpers.ChooseStrategyCore(String path, FileMode mode, FileAccess access, FileShare share, FileOptions options, Int64 preallocationSize, Nullable`1 unixCreateMode)\r\n",
+       "   at System.IO.StreamReader.ValidateArgsAndOpenPath(String path, Encoding encoding, Int32 bufferSize)\r\n",
+       "   at System.IO.StreamReader..ctor(String path)\r\n",
+       "   at Submission#31.<<Initialize>>d__0.MoveNext()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "stackTrace"
    ]
   }
  ],
