modified:   12. Exception Handling/The Anatomy of an Exception.ipynb

--- a/12. Exception Handling/The Anatomy of an Exception.ipynb
+++ b/12. Exception Handling/The Anatomy of an Exception.ipynb
@@ -623,7 +623,7 @@
    "source": [
     "Now, let's modify the code in the example above to make it **handle its exceptions**.    \n",
     "   \n",
-    "To do this, we wrap the code that could create problems in `try`-`catch` and then we add `catch` **blocks** to **handle** the type of **exception** we know could arise -- a `FileNotFoundException`, where the file name provided does not exist."
+    "To do this, we wrap the code that could create problems in `try`-`catch`, and then we add `catch` **blocks** to **handle** the type of **exception** we know could arise, such as a `FileNotFoundException`, where the file name provided does not exist."
    ]
   },
   {
