modified:   12. Exception Handling/The Anatomy of an Exception.ipynb

--- a/12. Exception Handling/The Anatomy of an Exception.ipynb
+++ b/12. Exception Handling/The Anatomy of an Exception.ipynb
@@ -375,7 +375,8 @@
     }
    },
    "source": [
-    "**Exception handling** is a mechanism which allows exceptions to be thrown and caught. This mechanism is provided internally by the **CLR** (**Common Language Runtime**).    \n",
+    "**Exception handling** is a mechanism which allows exceptions to be thrown and caught.   \n",
+    "This mechanism is provided internally by the **CLR** (**Common Language Runtime**).    \n",
     "    \n",
     "Parts of the **exception handling** infrastructure are the language constructs in $C\\#$ for *throwing* and *catching* **exceptions**.    \n",
     "\n",
