modified:   12. Exception Handling/The Anatomy of an Exception.ipynb

--- a/12. Exception Handling/The Anatomy of an Exception.ipynb
+++ b/12. Exception Handling/The Anatomy of an Exception.ipynb
@@ -573,7 +573,7 @@
     }
    },
    "source": [
-    "First, let's set up a string variable to store any **Stack Trace** information we get back after an **Exception**:"
+    "First, let's set up a string variable to store any **stack trace** information we get back after an **Exception**:"
    ]
   },
   {
