modified:   12. Exception Handling/The Anatomy of an Exception.ipynb

--- a/12. Exception Handling/The Anatomy of an Exception.ipynb
+++ b/12. Exception Handling/The Anatomy of an Exception.ipynb
@@ -699,7 +699,7 @@
     }
    },
    "source": [
-    "We may now review the following **Stack Trace** that we captured in reference to the `FileNotFounException`: "
+    "We may now review the following **stack trace** that we captured in reference to the `FileNotFounException`: "
    ]
   },
   {
