modified:   12. Exception Handling/The Anatomy of an Exception.ipynb

--- a/12. Exception Handling/The Anatomy of an Exception.ipynb
+++ b/12. Exception Handling/The Anatomy of an Exception.ipynb
@@ -699,7 +699,22 @@
     }
    },
    "source": [
-    "We may now review the following **stack trace** that we captured in reference to the `FileNotFounException`: "
+    "#### The Stack Trace"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Let's now review the following **stack trace** that we captured in reference to the `FileNotFounException` above: "
    ]
   },
   {
