modified:   12. Exception Handling/The Anatomy of an Exception.ipynb

--- a/12. Exception Handling/The Anatomy of an Exception.ipynb
+++ b/12. Exception Handling/The Anatomy of an Exception.ipynb
@@ -198,21 +198,6 @@
     }
    },
    "source": [
-    "### How Do Exceptions Work?"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
     "If during the normal program execution one of the methods throws an **exception**, the normal flow of the program is *interrupted*. \n",
     "   \n",
     "None of the lines that follow in the method will be executed.    \n",
@@ -308,7 +293,7 @@
     }
    },
    "source": [
-    "#### Exceptions in .NET"
+    "### Exceptions in .NET"
    ]
   },
   {
@@ -360,7 +345,7 @@
     }
    },
    "source": [
-    "#### Catching Exceptions in $C\\#$"
+    "### Catching Exceptions in $C\\#$"
    ]
   },
   {
@@ -699,7 +684,24 @@
     }
    },
    "source": [
-    "#### The Stack Trace"
+    "### The Stack Trace"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The **stack trace** contains *detailed information about the exception* including *where exactly it occurred* in the program.    \n",
+    "   \n",
+    "The **stack trace** is very useful for programmers when they try to understand the problem causing the exception. The information in the **stack trace** is very technical and is designed to be used by programmers and system administrators, but **not by the end users**. "
    ]
   },
   {
@@ -750,6 +752,36 @@
    ],
    "source": [
     "stackTrace"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Reading the Stack Trace"
    ]
   }
  ],
