modified:   12. Exception Handling/The Anatomy of an Exception.ipynb

--- a/12. Exception Handling/The Anatomy of an Exception.ipynb
+++ b/12. Exception Handling/The Anatomy of an Exception.ipynb
@@ -44,9 +44,9 @@
    },
    "source": [
     "An **Exception** is a notification that something has *interrupted the normal\n",
-    "program execution*.    \n",
+    "program execution*.**Exceptions** provide a programming paradigm for detecting and reacting to unexpected events.   \n",
     "   \n",
-    "**Exceptions** provide a programming paradigm for detecting and reacting to unexpected events. When an **exception** arises, the state of the program is saved, and the normal flow is interrupted while control is passed to an **exception** **handler** (if any of such exist in the current context).   \n",
+    "When an **exception** arises, the state of the program is saved, and the normal flow is interrupted while control is passed to an **exception** **handler** (if any of such exist in the current context).   \n",
     "   \n",
     "**Exceptions** are $raised$ or $thrown$ by programming code that must send a signal to the executing program about an error or an unusual situation. "
    ]
