--- a/12. Exception Handling/The Anatomy of an Exception.ipynb
+++ b/12. Exception Handling/The Anatomy of an Exception.ipynb
@@ -44,7 +44,8 @@
    },
    "source": [
     "An **Exception** is a notification that something has *interrupted the normal\n",
-    "program execution*. They provide a programming paradigm for detecting and reacting to unexpected events.   \n",
+    "program execution*.   \n",
+    "They provide a programming paradigm for detecting and reacting to unexpected events.   \n",
     "   \n",
     "When an **exception** arises, the state of the program is saved, and the normal flow is interrupted while control is passed to an **exception** **handler** (if any of such exist in the current context).   \n",
     "   \n",
