modified:   12. Exception Handling/The Anatomy of an Exception.ipynb

--- a/12. Exception Handling/The Anatomy of an Exception.ipynb
+++ b/12. Exception Handling/The Anatomy of an Exception.ipynb
@@ -199,10 +199,9 @@
     }
    },
    "source": [
-    "If during the normal program execution one of the methods throws an **exception**, the normal flow of the program is *interrupted*. \n",
-    "   \n",
-    "None of the lines that follow in the method will be executed.    \n",
-    "The program will be interrupted until the CLR finds a *handler* that can process the **exception**. \n",
+    "If during the normal program execution one of the methods throws an **exception**, the normal flow of the program is *interrupted*, and none of the lines that follow in the method will be executed.   \n",
+    "      \n",
+    "The program will remain interrupted until the $CLR$ finds a *handler* that can process the **exception**. \n",
     "       \n",
     "In the example above this happens when the `StreamReader` is attempting to *initialize*. The `reader` local variable, as a result of the error occuring at this stage, **will not be initialized**, and it will instead have its default value be `null`:   \n"
    ]
