modified:   12. Exception Handling/The Anatomy of an Exception.ipyn

--- a/12. Exception Handling/The Anatomy of an Exception.ipynb
+++ b/12. Exception Handling/The Anatomy of an Exception.ipynb
@@ -1004,6 +1004,51 @@
     }
    },
    "source": [
+    "It kind of feels like the `return` statement, but it **throws exceptions** instead of returning a value.    \n",
+    "   \n",
+    "You’re not limited to using the `Exception` class. (It’s preferable *not* to.), as there are many options already defined.    \n",
+    "   \n",
+    "For instance, here’s a small list of some common exceptions and what they’re for:\n",
+    "\n",
+    "- `NotImplementedException`:<br> Used to indicate that a method hasn’t been implemented yet. Visual Studio will frequently put this in when you use it to automatically generate a method.\n",
+    "- `IndexOutOfRangeException`:<br> Used when you access an index beyond the size of a collection. \n",
+    "- `InvalidCastException`:<br> Used when you try to cast to a type that wasn’t the right kind of object. - \n",
+    "- `FormatException`:<br> Used when text was not in the right format for converting to something else. - \n",
+    "- `NotSupportedException`:<br> You tried to do an operation that wasn’t supported. For instance, make a method call at a time that didn’t allow it.\n",
+    "- `NullReferenceException`:<br> A reference type contained null instead of an actual object. \n",
+    "- `StackOverflowException`:<br> You see this when you run out of space on the stack. This is usually a result of recursion that went bad.\n",
+    "- `DivideByZeroException`:<br> You tried to divide by zero and got caught\n",
+    "- `ArgumentNullException`:<br> One of the arguments or parameters that you gave to a method was null, but the method requires something besides null.\n",
+    "- `ArgumentOutOfRangeException`:<br> An argument contained a value that the method couldn’t intelligently deal with (e.g., it required a number between 1 and 10, but you gave it 13)."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
     "    \n",
     "**Exceptions** are normal classes and the only requirement is that they inherit directly or indirectly from the `System.Exception` class."
    ]
