modified:   12. Exception Handling/The Anatomy of an Exception.ipynb

--- a/12. Exception Handling/The Anatomy of an Exception.ipynb
+++ b/12. Exception Handling/The Anatomy of an Exception.ipynb
@@ -1006,9 +1006,7 @@
    "source": [
     "It kind of feels like the `return` statement, but it **throws exceptions** instead of returning a value.    \n",
     "   \n",
-    "You’re not limited to using the `Exception` class. (It’s preferable *not* to.), as there are many options already defined.    \n",
-    "   \n",
-    "For instance, here’s a small list of some common exceptions and what they’re for:\n",
+    "You’re not limited to using the `Exception` class. (It’s preferable *not* to.), as there are many options *already defined*. For instance, here’s a small list of some common exceptions and what they’re for:\n",
     "\n",
     "- `NotImplementedException`:<br> Used to indicate that a method hasn’t been implemented yet. Visual Studio will frequently put this in when you use it to automatically generate a method.\n",
     "- `IndexOutOfRangeException`:<br> Used when you access an index beyond the size of a collection. \n",
