modified:   12. Exception Handling/The Anatomy of an Exception.ipynb

--- a/12. Exception Handling/The Anatomy of an Exception.ipynb
+++ b/12. Exception Handling/The Anatomy of an Exception.ipynb
@@ -1010,8 +1010,8 @@
     "\n",
     "- `NotImplementedException`:<br> Used to indicate that a method hasn’t been implemented yet. Visual Studio will frequently put this in when you use it to automatically generate a method.\n",
     "- `IndexOutOfRangeException`:<br> Used when you access an index beyond the size of a collection. \n",
-    "- `InvalidCastException`:<br> Used when you try to cast to a type that wasn’t the right kind of object. - \n",
-    "- `FormatException`:<br> Used when text was not in the right format for converting to something else. - \n",
+    "- `InvalidCastException`:<br> Used when you try to cast to a type that wasn’t the right kind of object.\n",
+    "- `FormatException`:<br> Used when text was not in the right format for converting to something else. \n",
     "- `NotSupportedException`:<br> You tried to do an operation that wasn’t supported. For instance, make a method call at a time that didn’t allow it.\n",
     "- `NullReferenceException`:<br> A reference type contained null instead of an actual object. \n",
     "- `StackOverflowException`:<br> You see this when you run out of space on the stack. This is usually a result of recursion that went bad.\n",
