modified:   12. Exception Handling/The Anatomy of an Exception.ipynb

--- a/12. Exception Handling/The Anatomy of an Exception.ipynb
+++ b/12. Exception Handling/The Anatomy of an Exception.ipynb
@@ -1004,8 +1004,37 @@
     }
    },
    "source": [
-    "It kind of feels like the `return` statement, but it **throws exceptions** instead of returning a value.    \n",
-    "   \n",
+    "It kind of feels like the `return` statement, but it **throws exceptions** instead of returning a value. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "    \n",
+    "**Exceptions** are normal classes and the only requirement is that they inherit directly or indirectly from the `System.Exception` class."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
     "You’re not limited to using the `Exception` class. (It’s preferable *not* to.), as there are many options *already defined*. For instance, here’s a small list of some common exceptions and what they’re for:\n",
     "\n",
     "- `NotImplementedException`:<br> Used to indicate that a method hasn’t been implemented yet. Visual Studio will frequently put this in when you use it to automatically generate a method.\n",
@@ -1033,22 +1062,6 @@
    },
    "source": [
     "<br>"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "    \n",
-    "**Exceptions** are normal classes and the only requirement is that they inherit directly or indirectly from the `System.Exception` class."
    ]
   }
  ],
