modified:   12. Exception Handling/Exceptions Heirarchy.ipynb

--- a/12. Exception Handling/Exceptions Heirarchy.ipynb
+++ b/12. Exception Handling/Exceptions Heirarchy.ipynb
@@ -95,7 +95,9 @@
    "source": [
     "In $.NET\\,\\,Framework$, `Exception` is the **base class for all exceptions**.    \n",
     "\n",
-    "Several classes inherit directly from it, including `ApplicationException` and `SystemException`. These two classes are base classes for almost all exceptions that occur during the program execution.   \n",
+    "Several classes inherit directly from it, including `ApplicationException` and `SystemException`.    \n",
+    "   \n",
+    "These two classes are base classes for almost all exceptions that occur during the program execution.   \n",
     "   \n",
     "The `Exception` class contains a copy of the call-stack at the time the exception instance was created. The class also has a (usually) short message describing the error (filled in by the method throwing the exception). \n",
     "   \n",
