modified:   12. Exception Handling/Exceptions Heirarchy.ipynb

--- a/12. Exception Handling/Exceptions Heirarchy.ipynb
+++ b/12. Exception Handling/Exceptions Heirarchy.ipynb
@@ -101,7 +101,7 @@
     "   \n",
     "The `Exception` class contains a copy of the call-stack at the time the exception instance was created. The class also has a (usually) short message describing the error (filled in by the method throwing the exception). \n",
     "   \n",
-    "Every exception could have a **nested exception** also sometimes called an i**nner exception**, **wrapped exception** or **internal exception**.   \n",
+    "Every exception could have a **nested exception** also sometimes called an **inner exception**, **wrapped exception** or **internal exception**.   \n",
     "   \n",
     "The ability to wrap an exception with another exception is very useful in some cases and allows exceptions to be linked in the so called **exception chain**."
    ]
